# bevy_quadtree

./: CHANGELOG.md  Cargo.toml  README.md
.github/scripts/: test.sh
.github/workflows/: publish.yaml  release.yaml  test.yaml
bevy_quadtree/: Cargo.toml  README.md
bevy_quadtree/src/: bound_check.rs  collision.rs  lib.rs  node.rs  plugin.rs  query.rs  shape.rs  system.rs  test_utils.rs  tree.rs
bevy_quadtree/src/plugin/: mod.rs  multi_plugin.rs
bevy_quadtree/src/shape/: circle.rs  mod.rs  rect.rs  rotated_rect.rs
bevy_quadtree/src/tree/: mod.rs  quad_tree.rs  query.rs  tree_impl.rs
images/: images
