[workspace]
members = ["bevy_quadtree"]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Louis <836250617@qq.com>"]
description = "A quadtree plugin for bevy"
license = "MIT"
edition = "2021"
repository = "https://github.com/kingwingfly/bevy_quadtree"
documentation = "https://docs.rs/bevy_quadtree"

[workspace.dependencies]
bevy_quadtree = { path = "bevy_quadtree" }

[profile.dev]
opt-level = 3
