[package]
name = "bevy_quadtree"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = ""

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bevy = { workspace = true }
parking_lot = { version = "0.12.3", default-features = false }
paste = { version = "1.0.15", default-features = false }

[dev-dependencies]
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
