[package]
name = "bevy_quadtree"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/bevy_quadtree"
description = "A quadtree plugin for bevy"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_math = { workspace = true }
bevy_transform = { workspace = true, features = ["bevy-support"] }
bevy_log = { workspace = true }
bevy_gizmos = { workspace = true, optional = true }
bevy_color = { workspace = true, optional = true }
bevy_sprite = { workspace = true, optional = true }
parking_lot = { version = "0.12.3", default-features = false }
paste = { version = "1.0.15", default-features = false }

[dev-dependencies]
rand = { version = "0.9.0", default-features = false }
rand_chacha = { version = "0.9.0", default-features = false }

[features]
default = []
sprite = ["dep:bevy_sprite"]
gizmos = ["dep:bevy_gizmos", "dep:bevy_color"]
multi-quadtree = []
